--- a/IntentsPractice/app/src/main/AndroidManifest.xml
+++ b/IntentsPractice/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="es.pue.intentspractice">
 
-    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -10,6 +12,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".presentationlayer.controllers.activities.ContactsActivity">
+        </activity>
         <activity android:name=".presentationlayer.controllers.activities.DialerActivity">
         </activity>
         <activity android:name=".presentationlayer.controllers.activities.GpsActivity">
