Practice with intent services

--- a/Calculadora/app/src/main/AndroidManifest.xml
+++ b/Calculadora/app/src/main/AndroidManifest.xml
@@ -2,17 +2,34 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="es.pue.calculadora">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
+        <receiver
+                android:name=".HtmlReceiver"
+                android:enabled="true"
+                android:exported="false">
+        </receiver>
+
         <service
-            android:name=".CalculatorService"
-            android:enabled="true"
-            android:exported="false">
+                android:name=".WebRemoteService"
+                android:enabled="true"
+                android:exported="false">
+        </service>
+
+        <activity android:name=".WebActivity">
+        </activity>
+
+        <service
+                android:name=".CalculatorService"
+                android:enabled="true"
+                android:exported="false">
         </service>
 
         <activity android:name=".MainActivity">
